saves/test/demo_full_20240802_193545/vectorgates/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp vectorgates_tb.v vectorgates.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
vectorgates_tb.v:70: $finish called at 10000 (1ps)

iverilog cmd 2 error:

